create: added colored tags for column

--- a/wp-content/themes/vmv-theme/assets/sass/_article-column.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_article-column.sass
@@ -6,7 +6,7 @@
 		width: 850px
 		overflow: hidden
 		margin-bottom: 10px
-		
+
 		&-border
 			display: flex
 			padding-bottom: 25px
@@ -94,3 +94,11 @@
 	font-size: 12px
 	line-height: 15px
 	text-transform: uppercase
+	&-горячее
+		color: #FF4F52
+	&-подборки
+		color: #AC8EE3
+	&-новости
+		color: #4592FF
+	&-мнение
+		color: #3BBDC4
