--- a/wp-content/themes/vmv-theme/assets/css/vmv-theme.css
+++ b/wp-content/themes/vmv-theme/assets/css/vmv-theme.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: "Lato Black";
   src: local("Lato-Black") local("Lato Black") url("../fonts/Lato-Black.woff") format("woff"), url("../fonts/Lato-Black.woff2") format("woff2");
@@ -1053,4 +1054,20 @@ body {
   font-size: 12px;
   line-height: 15px;
   text-transform: uppercase;
+}
+
+.tag-горячее {
+  color: #FF4F52;
+}
+
+.tag-подборки {
+  color: #AC8EE3;
+}
+
+.tag-новости {
+  color: #4592FF;
+}
+
+.tag-мнение {
+  color: #3BBDC4;
 }
