--- a/wp-content/themes/vmv-theme/assets/sass/_article-column.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_article-column.sass
@@ -1,3 +1,9 @@
+.main
+	&-column
+		display: flex
+		justify-content: space-between
+		align-items: flex-start
+		// border: 1px solid red
 .article
 	&-column
 		border-radius: 10px
@@ -6,6 +12,7 @@
 		width: 850px
 		overflow: hidden
 		margin-bottom: 10px
+		margin-top: 30px
 
 		&-border
 			display: flex
