--- a/wp-content/themes/vmv-theme/assets/sass/_sidebar.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_sidebar.sass
@@ -1,11 +1,15 @@
+body
+	counter-reset: section
 .sidebar
 	&-front-page
 		// border: 1px solid red
 		margin-left: 30px
 		margin-top: 30px
 		// background-color: #fff
+		width: 23%
 .widget
-	max-width: 263px
+	// border: 1px solid red
+	// max-width: 263px
 	// width: 40%
 	background-color: #fff
 	border-radius: 10px
@@ -13,7 +17,7 @@
 	&-title
 		padding: 20px 25px
 		border-bottom: 1px solid #D9DADB
-		font-family: "Lato Black", sans-serif
+		font-family: "Lato", sans-serif
 		// font-weight: 900
 		font-size: 14px
 		line-height: 20px
@@ -61,23 +65,6 @@
 			font-size: 14px
 			line-height: 20px
 			margin: 0
-	.tagcloud
-		display: flex
-		align-items: center
-		justify-content: flex-start
-		flex-wrap: wrap
-		padding: 20px
-		padding-bottom: 35px
-	.tag-cloud-link
-		// width: 40%
-		text-decoration: none
-		padding: 5px 15px
-		border: 1px solid #D9DADB
-		border-radius: 5px
-		margin-right: 10px
-		margin-bottom: 15px
-		line-height: 20px
-		color: #262D33
 	&-socialNetworks
 		padding-bottom: 40px
 		.widget
@@ -102,3 +89,61 @@
 			&-twitter-icon
 				margin-right: 20px
 				margin-left: 20px
+	&-recent-posts
+		&-wrapper
+			padding: 0 25px 17px
+			a
+				display: flex
+				align-items: center
+				// justify-content: space-between
+				text-decoration: none
+				padding-top: 17px
+				padding-bottom: 17px
+				position: relative
+				&:not(:last-child)
+					border-bottom: 1px solid #D9DADB
+				&::before
+					position: absolute
+					right: 5px
+					counter-increment: section
+					content: counter(section)
+					color: #262D33
+					opacity: 0.08
+					font-size: 70px
+					line-height: 50px
+					font-family: "Lato Black", sans-serif
+					font-style: italic
+			img
+				// width: 60px
+				height: 60px
+				margin-right: 10px
+			h4
+				font-family: Lato
+				font-style: normal
+				font-weight: normal
+				font-size: 14px
+				line-height: 20px
+				color: #4B5157
+				margin: 0
+				margin-bottom: 5px
+			span
+				color: #939699
+				font-size: 12px
+				line-height: 15px
+	.tagcloud
+		display: flex
+		align-items: center
+		justify-content: flex-start
+		flex-wrap: wrap
+		padding: 20px
+		padding-bottom: 35px
+	.tag-cloud-link
+		// width: 40%
+		text-decoration: none
+		padding: 5px 15px
+		border: 1px solid #D9DADB
+		border-radius: 5px
+		margin-right: 10px
+		margin-bottom: 15px
+		line-height: 20px
+		color: #262D33
