--- a/wp-content/themes/vmv-theme/assets/sass/_article-column.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_article-column.sass
@@ -64,6 +64,7 @@
 			// display: flex
 			// align-items: center
 			&-icon
+				fill: #BCBFC2
 				margin-left: 5px
 			&-counter
 				margin-left: 5px
