--- a/wp-content/themes/vmv-theme/assets/sass/_article-grid.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_article-grid.sass
@@ -96,6 +96,8 @@
 						.comments
 							display: flex
 							align-items: center
+							&-icon
+								fill: #BCBFC2
 							&-counter
 								color: #939699
 								font-size: 12px
