--- a/wp-content/themes/vmv-theme/assets/sass/_sidebar.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_sidebar.sass
@@ -117,9 +117,7 @@ body
 				// width: 60px
 				height: 60px
 				margin-right: 10px
-			.recent-posts-thumb
-				// width: 60px
-				height: 60px
+				object-fit: cover
 			h4
 				font-family: Lato
 				font-style: normal
