--- a/wp-content/themes/vmv-theme/assets/sass/_special.sass
+++ b/wp-content/themes/vmv-theme/assets/sass/_special.sass
@@ -8,8 +8,26 @@
 .photo-report
 	min-height: 570px
 	width: 49%
-	border: 1px solid red
+	// border: 1px solid red
 	position: relative
+	overflow: hidden
+	border-radius: 10px
+	&-button
+		color: #fff
+		background-color:#4592FF
+		border-radius: 20px
+		padding: 10px 20px
+		text-decoration: none
+		display: flex
+		align-items: center
+		margin-bottom: 20px
+		&:hover
+			color: #fff
+	&-icon
+		fill: #fff
+		margin-right: 8px
+	&-counter
+		margin-left: 8px
 	.category-link
 		color: #FFFFFF
 		border-radius: 3px
@@ -48,13 +66,6 @@
 		height: 100%
 		background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35))
 		z-index: 1
-	&-button
-		color: #fff
-		background-color: ##4592FF
-		border-radius: 20px
-		&-icon
-			fill: #fff
-
 	&-content
 		position: relative
 		z-index: 2
